Refactor(PetriNet): Cleaned state logic and refactor initial/final fields to ID